<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v_gd_10"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v_gd_35"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".35"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v_gd_65"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".65"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v_gd_90"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gd_5"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".05"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gd_15"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gd_20"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".20"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gd_30"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".30"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gd_35"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".35"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gd_45"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gd_55"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".55"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gd_60"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".60"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gd_70"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".7"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gd_75"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".75"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gd_85"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".85"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h_gd_95"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".95"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@id/h_gd_5"
        app:layout_constraintStart_toStartOf="@id/v_gd_10"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/etmail"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@id/h_gd_15"
        app:layout_constraintEnd_toEndOf="@id/v_gd_90"
        app:layout_constraintStart_toStartOf="@id/v_gd_10"
        app:layout_constraintTop_toTopOf="@id/h_gd_5" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@id/h_gd_20"
        app:layout_constraintStart_toStartOf="@id/v_gd_10"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/etsub"
        android:hint="@string/subject"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@id/h_gd_30"
        app:layout_constraintEnd_toEndOf="@id/v_gd_90"
        app:layout_constraintStart_toStartOf="@id/v_gd_10"
        app:layout_constraintTop_toTopOf="@id/h_gd_20"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@id/h_gd_35"
        app:layout_constraintStart_toStartOf="@id/v_gd_10"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/etbody"
        android:hint="@string/body"
        android:inputType="textLongMessage"
        app:layout_constraintBottom_toBottomOf="@id/h_gd_45"
        app:layout_constraintEnd_toEndOf="@id/v_gd_90"
        app:layout_constraintStart_toStartOf="@id/v_gd_10"
        app:layout_constraintTop_toTopOf="@id/h_gd_35" />
    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/btnmove"
        android:text="@string/move"
        app:layout_constraintTop_toTopOf="@id/h_gd_45"
        app:layout_constraintBottom_toBottomOf="@id/h_gd_55"
        app:layout_constraintStart_toStartOf="@id/v_gd_35"
        app:layout_constraintEnd_toEndOf="@id/v_gd_65"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@id/h_gd_60"
        app:layout_constraintStart_toStartOf="@id/v_gd_10"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/etnumber"
        android:hint="@string/number"
        android:inputType="number"
        android:maxLength="10"
        app:layout_constraintBottom_toBottomOf="@id/h_gd_70"
        app:layout_constraintEnd_toEndOf="@id/v_gd_90"
        app:layout_constraintStart_toStartOf="@id/v_gd_10"
        app:layout_constraintTop_toTopOf="@id/h_gd_60" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@id/h_gd_75"
        app:layout_constraintStart_toStartOf="@id/v_gd_10"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/etmessage"
        android:hint="@string/message"
        android:inputType="textLongMessage"
        app:layout_constraintBottom_toBottomOf="@id/h_gd_85"
        app:layout_constraintEnd_toEndOf="@id/v_gd_90"
        app:layout_constraintStart_toStartOf="@id/v_gd_10"
        app:layout_constraintTop_toTopOf="@id/h_gd_75" />
    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/btnsms"
        android:text="@string/SMS"
        app:layout_constraintTop_toTopOf="@id/h_gd_85"
        app:layout_constraintBottom_toBottomOf="@id/h_gd_95"
        app:layout_constraintStart_toStartOf="@id/v_gd_35"
        app:layout_constraintEnd_toEndOf="@id/v_gd_65"/>

</androidx.constraintlayout.widget.ConstraintLayout>